--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.553.0",
     "moment": "^2.30.1",
     "next": "16.0.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0-rc.1",
     "react-apexcharts": "^1.8.0",
     "react-circular-progressbar": "^2.2.0",
